--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "description": "An out-of-box UI solution for enterprise applications",
   "scripts": {
+    "start": "cross-env UMI_ENV=dev umi dev",
     "analyze": "cross-env ANALYZE=1 umi build",
     "build": "umi build",
     "deploy": "npm run build && npm run gh-pages",
@@ -18,12 +19,10 @@
     "lint:js": "eslint --cache --ext .js,.jsx,.ts,.tsx --format=pretty ./src",
     "lint:prettier": "prettier -c --write \"src/**/*\" --end-of-line auto",
     "lint:style": "stylelint --fix \"src/**/*.less\" --syntax less",
-    "openapi": "umi openapi",
     "playwright": "playwright install && playwright test",
     "prepare": "husky install",
     "prettier": "prettier -c --write \"src/**/*\"",
     "serve": "umi-serve",
-    "start": "cross-env UMI_ENV=dev umi dev",
     "start:dev": "cross-env REACT_APP_ENV=dev MOCK=none UMI_ENV=dev umi dev",
     "start:no-mock": "cross-env MOCK=none UMI_ENV=dev umi dev",
     "start:no-ui": "cross-env UMI_UI=none UMI_ENV=dev umi dev",
@@ -37,9 +36,15 @@
   "lint-staged": {
     "**/*.less": "stylelint --syntax less",
     "**/*.{js,jsx,ts,tsx}": "npm run lint-staged:js",
-    "**/*.{js,jsx,tsx,ts,less,md,json}": ["prettier --write"]
+    "**/*.{js,jsx,tsx,ts,less,md,json}": [
+      "prettier --write"
+    ]
   },
-  "browserslist": ["> 1%", "last 2 versions", "not ie <= 10"],
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 10"
+  ],
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@ant-design/pro-card": "^1.19.0",
@@ -52,6 +57,7 @@
     "classnames": "^2.3.0",
     "lodash": "^4.17.0",
     "moment": "^2.29.0",
+    "nanoid": "^3.3.4",
     "omit.js": "^2.0.2",
     "rc-menu": "^9.1.0",
     "rc-util": "^5.16.0",
@@ -72,10 +78,8 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.0",
     "@umijs/fabric": "^2.8.0",
-    "@umijs/openapi": "^1.3.0",
     "@umijs/plugin-blocks": "^2.2.0",
     "@umijs/plugin-esbuild": "^1.4.0",
-    "@umijs/plugin-openapi": "^1.3.0",
     "@umijs/preset-ant-design-pro": "^1.3.0",
     "@umijs/preset-dumi": "^1.1.0",
     "@umijs/preset-react": "^2.1.0",
@@ -84,15 +88,15 @@
     "detect-installer": "^1.0.0",
     "eslint": "^7.32.0",
     "gh-pages": "^3.2.0",
-    "husky": "^7.0.4",
     "jsdom-global": "^3.0.0",
     "lint-staged": "^10.0.0",
     "mockjs": "^1.1.0",
     "prettier": "^2.5.0",
     "stylelint": "^13.0.0",
-    "swagger-ui-react": "^3.52.0",
     "typescript": "^4.5.0",
     "umi-serve": "^1.9.10"
   },
-  "engines": { "node": ">=12.0.0" }
+  "engines": {
+    "node": ">=12.0.0"
+  }
 }
