--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     ],
     "dependencies": {
         "@ant-design/icons": "^4.7.0",
+        "@ant-design/plots": "^1.0.9",
         "@ant-design/pro-card": "^1.19.0",
+        "@ant-design/pro-components": "^1.1.5",
         "@ant-design/pro-descriptions": "^1.10.0",
         "@ant-design/pro-form": "^1.64.0",
         "@ant-design/pro-layout": "^6.35.0",
